--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
       "plugin:@typescript-eslint/recommended",
       // This disables the formatting rules in ESLint that Prettier is going to be responsible for handling.
       // Make sure it"s always the last config, so it gets the chance to override other configs.
-      "eslint-config-prettier",
+      "eslint-config-prettier"
     ],
     "settings": {
       "react": {
@@ -20,10 +20,10 @@
         "node": {
           "paths": ["src"],
           "extensions": [".js", ".jsx", ".ts", ".tsx"],
-        },
-      },
+        }
+      }
     },
     "rules": {
-      // Add your own rules here to override ones from the extended configs.
+        "react/react-in-jsx-scope": "off"
     }
   }
